Fixed swiper alignment and overflow issues

--- a/public/stylesheets/style_all.css
+++ b/public/stylesheets/style_all.css
@@ -10,6 +10,8 @@ body {
     -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
 
     font-family: Calibri, sans-serif;
+
+    overflow-x: hidden;
 }
 
 
@@ -148,6 +150,9 @@ body {
 /* Body */
 /* Swiper styling */
 .swiper-container {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
     height: 720px;
 }
 .swiper-wrapper {
@@ -161,12 +166,21 @@ body {
     align-items: center;
     font-size: 60px;
 
+    width: auto;
+
     grid-row: 1;
     grid-column: 1;    
 }
 .swiper-pagination-bullet {
     opacity: 1;
     background-color: #338AFF !important;
+}
+.swiper-slide img, .swiper-slide .content {
+    max-width: 100%;
+    height: auto;
+}
+.swiper-container, .swiper-container * {
+    box-sizing: border-box; /* Ensures padding and border are included in the element's total width and height */
 }
 
 
